--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,10 +25,14 @@ jobs:
 
     - name: Execute Permission for gradlew
       run: chmod +x gradlew
+      
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: build
+        
+    - name: show file name
+      run: ls ./build/libs/
         
     - uses: mr-smithers-excellent/docker-build-push@v6
       with:
